src/main/webapp/css/document_editor/imcms-document-editor-head.css
.imcms-document-editor-head {
    width: 100%;
}

.imcms-document-editor-head__tools {
    padding: 0 27px 14px;
}

.imcms-document-editor-head-tools__tool {
    padding: 0 10px;
}

.imcms-document-editor-head-tool__button {
    padding: 13px 17px;
    width: 100%;
}

.imcms-input-search__text-box {
    width: 100%;
}

.imcms-document-editor-head-tool__select {
    display: block;
    width: 100%;
}

.imcms-document-editor-head-tool__select .imcms-drop-down-list {
    display: block;
}

.imcms-document-editor-head__tools .imcms-document-editor-head-tool__button {
    margin-top: 27px;
}

.imcms-document-editor-head__tools .imcms-document-editor-head-tool__search .imcms-input-search__button {
    top: 40px;
}

.imcms-document-editor-head__tools .imcms-document-editor-head-tool__search .imcms-text-box__label,
.imcms-document-editor-head__tools .imcms-document-editor-head-tool__select .imcms-select__label {
    margin-bottom: 5px;
}

